# AOC

./: .gitignore  README.md
2020/: AOC1.rs  AOC2.rs  AOC3.rs
2020/day/: Cargo.toml
2020/day/src/: main.rs
2020/day1/src/: main.rs
2020/day10/: Cargo.toml
2020/day10/src/: main.rs
2020/day11/src/: main.rs
2020/day12/: Cargo.toml
2020/day12/src/: main.rs
2020/day13/: Cargo.toml
2020/day13/src/: main.rs
2020/day14/: puzzle1.py  puzzle2.py
2020/day15/: puzzle_15.py
2020/day16/: main.dart  puzzle2.dart
2020/day2/: Cargo.toml
2020/day2/src/: main.rs
2020/day3/: Cargo.toml
2020/day3/src/: main.rs
2020/day4/: Cargo.toml
2020/day4/src/: main.rs
2020/day5/: Cargo.toml  a.out
2020/day5/src/: main.rs
2020/day6/src/: main.rs
2020/day7/: Cargo.toml
2020/day7/src/: main.rs
2020/day8/: Cargo.toml
2020/day8/src/: main.rs
2020/day9/: Cargo.toml
2020/day9/src/: main.rs
2022/: helpers.hpp  template.cpp
2022/1/: main.cpp
2022/11/: main.cpp
2022/12/: main.cpp
2022/13/: main.cpp  meson.build
2022/14/: main.cpp
2022/2/: main.cpp
2022/3/: main.cpp
2022/4/: main.cpp
2022/5/: main.cpp
2022/6/: main.cpp
2022/7/: main.cpp
2022/8/: main.cpp
2022/9/: main.cpp
